// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graph-provider should render children and match snapshot 1`] = `
<div>
  Child Content
</div>
`;

exports[`graph-provider should render children and match snapshot 2`] = `
<DocumentFragment>
  <div>
    Child Content
  </div>
</DocumentFragment>
`;
